initial parking_spot_endpoints file structure
